--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <swagger.version>2.8.13</swagger.version>
     <liquibase.version>4.30.0</liquibase.version>
     <preliquibase.version>1.6.0</preliquibase.version>
+    <junit-jupiter-api.version>5.11.4</junit-jupiter-api.version>
+    <mockito-core.version>5.7.0</mockito-core.version>
   </properties>
 
   <dependencyManagement>
@@ -86,6 +88,7 @@
       <artifactId>liquibase-core</artifactId>
       <version>${liquibase.version}</version>
     </dependency>
+
   </dependencies>
   <build>
     <finalName>TaskManager</finalName>
