--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <preliquibase.version>1.6.0</preliquibase.version>
     <junit-jupiter-api.version>5.11.4</junit-jupiter-api.version>
     <mockito-core.version>5.7.0</mockito-core.version>
+    <jackson-databind.version>2.19.2</jackson-databind.version>
+    <jackson-dataformat-xml.version>2.19.2</jackson-dataformat-xml.version>
   </properties>
 
   <dependencyManagement>
@@ -89,7 +91,19 @@
       <version>${liquibase.version}</version>
     </dependency>
 
+    <!-- Converters -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-databind.version}</version> <!-- Use a recent version -->
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>${jackson-dataformat-xml.version}</version>
+    </dependency>
   </dependencies>
+
   <build>
     <finalName>TaskManager</finalName>
     <plugins>
