--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,8 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     path: /swagger
+    default-produces-media-type: application/json
 
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
+
