--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     build:
       context: ..
       dockerfile: docker/backend.build.Dockerfile
+    volumes:
+      - ./logs:/var/log
     ports:
       - "4200:4200"
     environment:
