JWT tokens added

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
     <mockito-core.version>5.7.0</mockito-core.version>
     <jackson-databind.version>2.19.2</jackson-databind.version>
     <jackson-dataformat-xml.version>2.19.2</jackson-dataformat-xml.version>
-    <spring-security-web.version>6.4.3</spring-security-web.version>
+    <jwt.version>0.13.0</jwt.version>
+    <spring-security.version>6.4.3</spring-security.version>
   </properties>
 
   <dependencyManagement>
@@ -65,25 +66,39 @@
       <artifactId>spring-boot-starter-security</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
-<!--      <version>${spring.boot.version}</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
     </dependency>
+
+    <!-- Security -->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>6.4.3</version>
+      <version>${spring-security.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>6.4.3</version>
+      <version>${spring-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${jwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${jwt.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>${jwt.version}</version>
+      <scope>runtime</scope>
     </dependency>
 
     <!-- Swagger -->
